# mariadb-server

./: .gitignore  CMakeLists.txt
client/: mysql.cc  mysqlbinlog.cc  mysqltest.cc
mysql-test/include/: concurrent.inc  mix2.inc
mysql-test/main/: alter_table_online_debug.result  alter_table_online_debug.test  cache_innodb.test  ctype_collate_implicit.result  ctype_collate_implicit.test  ctype_collate_implicit_def.result  delayed.result  delayed.test  flush.test  func_json.result  func_json.test  mysqlbinlog.result  opt_trace.result  partition_innodb.test  partition_innodb_plugin.test  selectivity.result  selectivity.test  selectivity_innodb.result  simultaneous_assignment.test  subselect.test  update_innodb.test
mysql-test/std_data/rpl/: master-bin-seq_10.3.36.000001
mysql-test/suite/binlog/r/: binlog_mysqlbinlog_row_innodb.result  binlog_mysqlbinlog_row_myisam.result  binlog_stm_mysqlbinlog_collate_implicit.result
mysql-test/suite/mariabackup/: partial_exclude.result  partial_exclude.test
mysql-test/suite/parts/r/: debug_innodb_fail,subpartition.result  debug_innodb_fail.result  debug_myisam_crash,subpartition.result  debug_myisam_crash.result  debug_myisam_fail,subpartition.result  debug_myisam_fail.result
mysql-test/suite/rpl/r/: rpl_parallel_seq.result
mysql-test/suite/rpl/t/: rpl_parallel_seq.test
mysql-test/suite/sys_vars/r/: sysvars_aria.result  sysvars_server_embedded.result  sysvars_server_notembedded.result
sql/: CMakeLists.txt  charset_collations.cc  charset_collations.h  ddl_log.cc  field.h  ha_sequence.cc  handler.h  item.cc  item.h  item_func.h  item_jsonfunc.cc  item_strfunc.cc  json_schema.cc  json_schema.h  json_table.cc  lex_charset.h  log_event.cc  log_event.h  log_event_client.cc  log_event_server.cc  mysqld.cc  rpl_parallel.cc  slave.cc  sql_base.cc  sql_class.h  sql_delete.cc  sql_derived.cc  sql_explain.cc  sql_explain.h  sql_lex.cc  sql_lex.h  sql_parse.cc  sql_select.cc  sql_show.cc  sql_table.cc  sql_type.cc  sql_yacc.yy  structs.h  sys_vars.cc  table.cc  (+1 more)
sql/share/: errmsg-utf8.txt
storage/bitmap/: .gitignore  CMakeLists.txt  all-mysql-includes.h  bitbucket.cc  bitbucket.h  bitmap_config.h.in  bucket.cc  bucket.h  build-on-criterion  config.intel  field-def.txt  ha_bitmap.cc  ha_bitmap.h  ha_handler.cc  ha_handler.h  ha_partition.h  ha_scalarray.cc  ha_scalarray.h  ha_scalarray_toolbox-1x1.cc  ha_scalarray_toolbox-1x2.cc  ha_scalarray_toolbox-1x4.cc  ha_scalarray_toolbox-1x5.cc  ha_scalarray_toolbox-1x8.cc  ha_scalarray_toolbox-1x9.cc  ha_scalarray_toolbox-2x1.cc  ha_scalarray_toolbox-2x2.cc  ha_scalarray_toolbox-2x4.cc  ha_scalarray_toolbox-2x5.cc  ha_scalarray_toolbox-2x8.cc  ha_scalarray_toolbox-2x9.cc  ha_scalarray_toolbox-4x1.cc  ha_scalarray_toolbox-4x2.cc  ha_scalarray_toolbox-4x4.cc  ha_scalarray_toolbox-4x5.cc  ha_scalarray_toolbox-4x8.cc  ha_scalarray_toolbox-4x9.cc  ha_scalarray_toolbox-8x1.cc  ha_scalarray_toolbox-8x2.cc  ha_scalarray_toolbox-8x4.cc  ha_scalarray_toolbox-8x5.cc  (+16 more)
storage/bitmap/sorting/: QSORT.cc  QSORT.h  radix_ar_2001.c  radix_ar_2001_short.c  radix_once.c
storage/example/: ha_example.cc
storage/innobase/fil/: fil0fil.cc
storage/innobase/fts/: fts0fts.cc
storage/innobase/handler/: ha_innodb.cc
storage/innobase/include/: fts0types.h
storage/innobase/os/: os0file.cc
storage/innobase/row/: row0sel.cc
storage/innobase/srv/: srv0srv.cc
storage/innobase/trx/: trx0purge.cc  trx0trx.cc  trx0undo.cc
storage/maria/: ha_maria.cc
storage/spider/: ha_spider.cc  spd_conn.cc  spd_db_conn.cc  spd_db_conn.h  spd_db_include.h  spd_db_mysql.cc  spd_db_mysql.h  spd_table.cc  spd_table.h
